// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ah huge 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 45;
  line-height: 45px;
  text-align: center;
  padding-bottom: 10px;
  padding-top: 5px;
}

.IS4 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #696969;
  padding-bottom: 0;
  text-align: center;
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile ah medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
  text-align: center;
  padding-bottom: 10px;
  padding-top: 5px;
}

.IS4 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #696969;
  padding-bottom: 0;
  text-align: center;
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile ah wide 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 40;
  line-height: 40px;
  text-align: center;
  padding-bottom: 10px;
  padding-top: 5px;
}

.IS4 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #696969;
  padding-bottom: 0;
  text-align: center;
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile ah without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
  text-align: center;
  padding-bottom: 10px;
  padding-top: 5px;
}

.IS4 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #696969;
  padding-bottom: 0;
  text-align: center;
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;
